# dev_sr_preperation

./: .gitignore  CLAUDE.md  README_API.md  generation_log.txt  jupyter_config.py  main.py  next_work_list.txt  pyproject.toml  start_jupyter.sh  start_lab.sh  task_20250920.txt  task_20250920_02.txt  task_20250920_03.txt  text2sql_evaluator.py  venv_python.sh  work.md
adhoc_works/: column_extractor.py  data_sampler.py  db_connection.py  extract_rubicon_table_column_list.py  table_analyzer.py  table_discovery.py
arctic_text2sql_modules/: README.md  data_filter.py  execution_reward.py  grpo_trainer.py  integration_example.py  prompt_optimizer.py  test_modules.py
chase_sql_improvements/: README.md  integration_example.py
deploy/: .dockerignore  .env.template  Dockerfile  FIELD_MAPPING_DOCUMENTATION.md  FINAL_FIX_COMPLETE.md  FIX_SUMMARY.md  PARSER_IMPLEMENTATION_SUMMARY.md  README_DOCKER.md  README_QUICK.md  build.sh  check_db_data.py  check_schema.py  check_table_schema.py  cleanup_and_reprocess.py  cleanup_resolution.sql  cleanup_resolution_data.py  data_ingestion.py  db_connector.py  docker-compose.yml  main.py  mongodb_saver.py  openai_generator.py  requirements.txt  run.sh  schema_analyzer.py  setup.sh  test_capacity.py  test_complete_workflow.py  test_final_integration.py  test_goal_fix.py  test_integration.py  test_parsed_string_value.py  test_parser.py  test_power_consumption.py  test_resolution_final.py  test_resolution_fixed.py  test_resolution_parser.py  test_resolution_parser_extended.py  test_resolution_summary.py  test_simple_parsed_string.py  (+6 more)
(+49 files in other folders)
